[tool.poetry]
name = "vbpdf"
version = "0.1.4"
description = "Added topng to convert pdf to png file."
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
vbpdf = "vbpdf.main:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
