[tool.poetry]
name = "vbpdf"
version = "0.1.6"
description = "Added addbg for adding background image to png."
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/vaibhavblayer/vbpdf"
repository = "https://github.com/vaibhavblayer/vbpdf"
keywords = ["split pdf", "annotate pdf", "pdftopng", "png", "pdf"]

[tool.poetry.scripts]
vbpdf = "vbpdf.main:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
